# Semantic-Reducer

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/semantic_reducer/: __init__.py  reducer.py
